@@ -4603,3 +4603,5 @@ $_LANG['Ticket has already been assigned to other user in mean-time. Are you sur
 
 $_LANG['Enter document memo (optional)'] = 'Wprowadź notatkę widoczną na dokumentach (opcjonalnie)';
 $_LANG['Memo:'] = 'Notatka:';
+
+$_LANG['close event'] = 'zamknij zdarzenie';
